smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-missing-namespace.smithy
// Parse error at line 6, column 15 near `\n[EOF]`: Expected: '#', but found '\n'
$version: "2.0"

namespace smithy.example

use smithy.api
